2009-12-02  Gordon Williams <gordon.williams@collabora.co.uk>

	NB#135249 - "More applications" view locked with the main icon view
	            after launched under high load 

	* src/launcher/hd-launcher.c: Ensure that when launcher view is shown,
	  only the main view is set as visible.

2009-12-01  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#130846 Layout mode screen hangs after adding shortcut
		  - if Get started is opened in switcher

	Get shared comes with a large, invisible, offscreen,
	override-redirected window which stays on the top of
	the window stack all the times.  When the dialog is
	unmapped this wonderful code scans the stack to see
	if there's something above the desktop window, finds
	this OR window and ecides that it should stay in EDIT_DLG state.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_unmap_notify):
	  Disregard MBWMClientTypeOverride windows when deciding about
	  going back to EDIT state.  OR windows are meant to be unmanaged
	  anyways, aren't they?

2009-12-01  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#148662 multiline notification messages are shown wrongly

	We didn't care about the height of the notification message,
	but only took notice if it was too wide for the thumbnail.

	* src/home/hd-task-navigator.c (layout_notwin):
	  Now consider the height as well as the number of lines,
	  and crop if necessary.  Also some refactoring.

2009-11-30  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.121-1

	Fixes: NB#148728 - Regressions in hildon-desktop 2.2.121-1~unreleased
	(git master)

	* src/main.c: Revert the sync changes -- apparently it's not radically
	saving syncs after all and causes regressions.

2009-11-27  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#148101 Alarm during phone app rotation paralizes the device

	It seems that the X server remained grabbed indefinitely.

	* src/util/hd-util.c (hd_util_change_screen_orientation):
	  Make sure XUngrabServer() leaves the output queue.
